issue #39: remove pseudo+decl in case of covered selectors group

--- a/test/data/test_stylesheet/issue39.test27.css
+++ b/test/data/test_stylesheet/issue39.test27.css
@@ -1,6 +1,6 @@
-a, b, x:test + c {
+a, b, x:test {
     color: red
 }
-a, x:test + c {
+a, x:test {
     color: green
 }
